# pose-estimation-benchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PIPETRACK_IMPLEMENTATION_PLAN.md  README.md  changes_tbd.md  pyproject.toml  pytest.ini  remaining-work.md  requirements.txt
benchmarks/: README.md
configs/: 01_stabilization.yaml  02_tracking.yaml  03_association.yaml  05_global_id.yaml  06_roles.yaml  07_refine.yaml  README.md  benchmark_protocol.yaml  datasets.yaml  keypoint_mappings.yaml  model_envs.yaml  model_registry.yaml  p2_tracking.yaml  p3_association.yaml  p4_global_id.yaml
data/: README.md
docs/: adding-a-model.md  architecture.md  changes_tbd.md  collaboration.md  concepts.md  configuration.md  datasets.md  getting-started.md  improving-models.md  index.md  methods_log.md  metrics.md  models.md  results-format.md  roadmap.md  rtmpose-x-runbook.md  scripts.md  shared-data.md  troubleshooting.md  workflow.md
models/: README.md
pose_estimation/: __init__.py  coco_keypoint_eval.py  constants.py  keypoints.py  metrics.py  predictions.py  registry.py  results_io.py  schemas.py  triangulation.py  ue_export.py
presentables/: Conclusions.md  Detailed Production-Centric Research of recent Mod 379e2684654680b196feed84f3d88f8b.md  Pipeline_P2_P3_P4_Technical_Deep_Dive.md
report/: PS1_midsem_report.aux  PS1_midsem_report.bbl  PS1_midsem_report.blg  PS1_midsem_report.fdb_latexmk  PS1_midsem_report.fls  PS1_midsem_report.lof  PS1_midsem_report.lot  PS1_midsem_report.out  PS1_midsem_report.tex  PS1_midsem_report.toc  ref.bib
results/: README.md
src/: main.py
(+2364 files in other folders)
